import { createTestingPinia } from "@pinia/testing";
import { mount } from "@vue/test-utils";
import { useSearchFilter } from "@/composable/search";
import { settings } from "@/stores/settings";
// @ts-ignore
import EventSource, { sources } from "eventsourcemock";
import { afterEach, beforeEach, describe, expect, test, vi } from "vitest";
import { computed, nextTick } from "vue";
import { createI18n } from "vue-i18n";
import { createRouter, createWebHistory } from "vue-router";
import { default as Component } from "./EventSource.vue";
import LogViewer from "@/components/LogViewer/LogViewer.vue";
import { Container } from "@/models/Container";
import { Level } from "@/models/LogEntry";

vi.mock("@/stores/config", () => ({
  __esModule: true,
  default: { base: "", hosts: [{ name: "localhost", id: "localhost" }] },
  withBase: (path: string) => path,
}));

/**
 * @vitest-environment jsdom
 */
describe("<ContainerEventSource />", () => {
  const search = useSearchFilter();

  beforeEach(() => {
    global.EventSource = EventSource;
    // @ts-ignore
    window.scrollTo = vi.fn();
    global.IntersectionObserver = class IntersectionObserver {
      observe = vi.fn();
      disconnect = vi.fn();
      unobserve = vi.fn();
      takeRecords = vi.fn();
      root = null;
      rootMargin = "";
      thresholds = [];
    } as any;
    vi.useFakeTimers();
    vi.setSystemTime(1560336942459);
  });

  afterEach(() => {
    vi.restoreAllMocks();
    vi.useRealTimers();
  });

  function createLogEventSource(
    {
      searchFilter = "",
      hourStyle = "auto",
    }: { searchFilter?: string | undefined; hourStyle?: "auto" | "24" | "12" } = {
      hourStyle: "auto",
    },
  ) {
    settings.value.hourStyle = hourStyle;
    search.searchQueryFilter.value = searchFilter;
    if (searchFilter) {
      search.showSearch.value = true;
    }

    const router = createRouter({
      history: createWebHistory("/"),
      routes: [
        {
          path: "/",
          component: {
            template: "Test from createLogEventSource",
          },
        },
        {
          name: "/container/[id].time.[datetime]",
          path: "/container/:id/time/:datetime",
          component: {
            template: "Test from createLogEventSource",
          },
        },
      ],
    });

    return mount(Component, {
      global: {
        plugins: [
          router,
          createTestingPinia({
            createSpy: vi.fn,
            stubActions: false,
            initialState: {
              container: { containers: [{ id: "abc", image: "test:v123", host: "localhost" }] },
            },
          }),
          createI18n({}),
        ],
        components: {
          LogViewer,
        },
        provide: {
          [scrollContextKey as symbol]: {
            paused: computed(() => false),
            loading: computed(() => false),
          },
          [loggingContextKey as symbol]: {
            containers: computed(() => [{ id: "abc", image: "test:v123", host: "localhost" }]),
            streamConfig: reactive({ stdout: true, stderr: true }),
            hasComplexLogs: ref(false),
            levels: new Set<Level>(["info"]),
            historical: ref(false),
          },
        },
      },
      slots: {
        default: `
        <template #scoped="params"><LogViewer :messages="params.messages" :show-container-name="false" :visible-keys="[]" /></template>
        `,
      },
      props: {
        streamSource: useContainerStream,
        entity: new Container(
          "abc",
          new Date(), // created
          new Date(), // started
          new Date(), // finished
          "image",
          "name",
          "command",
          "localhost",
          {},
          "created",
          0,
          0,
          [],
        ),
      },
    });
  }

  const sourceUrl = "/api/hosts/localhost/containers/abc/logs/stream?stdout=1&stderr=1&levels=info";

  test("renders loading correctly", async () => {
    const wrapper = createLogEventSource();
    expect(wrapper.find("ul.animate-pulse").exists()).toBe(true);
  });

  test("should connect to EventSource", async () => {
    const wrapper = createLogEventSource();
    sources[sourceUrl].emitOpen();
    expect(sources[sourceUrl].readyState).toBe(1);
    wrapper.unmount();
  });

  test("should close EventSource", async () => {
    const wrapper = createLogEventSource();
    sources[sourceUrl].emitOpen();
    wrapper.unmount();
    expect(sources[sourceUrl].readyState).toBe(2);
  });

  test("should parse messages", async () => {
    const wrapper = createLogEventSource();
    sources[sourceUrl].emitOpen();
    sources[sourceUrl].emitMessage({
      data: `{"ts":1560336942459, "m":"This is a message.", "id":1, "rm": "This is a message.", "c": "abc"}`,
    });

    vi.runAllTimers();
    await nextTick();

    // @ts-ignore
    const [message, _] = wrapper.vm.messages;
    expect(message).toMatchSnapshot();
  });

  describe("search backfill", () => {
    const backfill = (id: number, ts: number) =>
      JSON.stringify([{ ts, m: `match ${id}`, id, rm: `match ${id}`, c: "abc" }]);

    // The server emits one backfill event per time window it scans. These used
    // to be spliced into the message list synchronously as each arrived, so a
    // search that matched anything rebuilt the whole array and re-rendered every
    // row once per window — the page froze right before results appeared, and
    // only ever when there were matches. They are batched now.
    test("a burst of windows is collected, not spliced in one at a time", async () => {
      const wrapper = createLogEventSource();
      sources[sourceUrl].emitOpen();

      for (let i = 1; i <= 6; i++) {
        sources[sourceUrl].emit("logs-backfill", { data: backfill(i, 1560336942000 + i) });
      }
      await nextTick();

      // The discriminating assertion: the unbatched version rebuilt the list on
      // every event, so all six were already in by now — and each rebuild had
      // re-rendered every row, which is what locked the page up.
      // @ts-ignore
      expect(wrapper.vm.messages, "windows should still be buffered").toHaveLength(0);

      await vi.advanceTimersByTimeAsync(400);
      await nextTick();

      // @ts-ignore
      expect(wrapper.vm.messages, "the whole burst should land in one rebuild").toHaveLength(6);
    });

    test("windows stay in order, oldest first", async () => {
      const wrapper = createLogEventSource();
      sources[sourceUrl].emitOpen();

      // Each window reaches further back, so later events are older lines.
      sources[sourceUrl].emit("logs-backfill", { data: backfill(2, 1560336942200) });
      sources[sourceUrl].emit("logs-backfill", { data: backfill(1, 1560336942100) });

      await vi.advanceTimersByTimeAsync(400);
      await nextTick();

      // @ts-ignore
      const ids = wrapper.vm.messages.map((m: { id: number }) => m.id);
      expect(ids).toEqual([1, 2]);
    });

    // Sitting on the final batch for the debounce interval reads as the search
    // having stalled just as it finishes.
    test("the last batch lands as soon as the scan reports done", async () => {
      const wrapper = createLogEventSource();
      sources[sourceUrl].emitOpen();

      sources[sourceUrl].emit("logs-backfill", { data: backfill(1, 1560336942100) });
      sources[sourceUrl].emit("search-status", {
        data: JSON.stringify({ scannedTo: "2026-06-01T14:31:00Z", matches: 1, done: true }),
      });
      await nextTick();

      // @ts-ignore
      expect(wrapper.vm.messages).toHaveLength(1);
    });
  });

  describe("search status", () => {
    test("shows no-logs when not searching and the stream is empty", async () => {
      const wrapper = createLogEventSource();
      sources[sourceUrl].emitOpen();

      await vi.advanceTimersByTimeAsync(3500);
      await nextTick();

      expect(wrapper.find('[data-testid="no-logs"]').exists()).toBe(true);
    });

    test("suppresses no-logs while a search is still running", async () => {
      const wrapper = createLogEventSource();
      sources[sourceUrl].emitOpen();
      sources[sourceUrl].emit("search-status", {
        data: JSON.stringify({ scannedTo: "2026-06-01T14:31:00Z", matches: 0, done: false }),
      });

      vi.advanceTimersByTime(3000);
      await nextTick();

      // The search status now renders in the container bar (see ScrollableView),
      // not inside EventSource; here we only assert the no-logs suppression.
      expect(wrapper.find('[data-testid="no-logs"]').exists()).toBe(false);
    });
  });

  describe("render html correctly", () => {
    test("should render messages", async () => {
      const wrapper = createLogEventSource();
      sources[sourceUrl].emitOpen();
      sources[sourceUrl].emitMessage({
        data: `{"ts":1560336942459, "m":"This is a message.", "id":1, "rm": "This is a message.", "c": "abc"}`,
      });

      vi.runAllTimers();
      await nextTick();

      expect(wrapper.find("ul[data-logs]").html()).toMatchSnapshot();
    });

    test("should render dates with 12 hour style", async () => {
      const wrapper = createLogEventSource({ hourStyle: "12" });
      sources[sourceUrl].emitOpen();
      sources[sourceUrl].emitMessage({
        data: `{"ts":1560336942459, "m":"foo bar", "id":1, "rm": "foo bar", "c": "abc"}`,
      });

      vi.runAllTimers();
      await nextTick();

      expect(wrapper.find("ul[data-logs]").html()).toMatchSnapshot();
    });

    test("should render dates with 24 hour style", async () => {
      const wrapper = createLogEventSource({ hourStyle: "24" });
      sources[sourceUrl].emitOpen();
      sources[sourceUrl].emitMessage({
        data: `{"ts":1560336942459, "m":"foo bar", "id":1, "c": "abc"}`,
      });

      vi.runAllTimers();
      await nextTick();

      expect(wrapper.find("ul[data-logs]").html()).toMatchSnapshot();
    });
  });
});
