// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ContainerEventSource /> > render html correctly > should render dates with 12 hour style 1`] = `
"<ul data-v-cf9ff940="" class="group pt-4 medium" style="--log-source-chars: 12;" data-logs="" show-container-name="false">
  <li data-v-cf9ff940="" id="1560336942709" data-time="1560336942709" class="group/entry">
    <div data-v-cf9ff940="" class="flex min-h-[1px] flex-1 content-center justify-center"><span class="loading loading-bars loading-md text-primary m-2" style="display: none;"></span></div>
  </li>
  <li data-v-cf9ff940="" id="1" data-time="1560336942459" class="group/entry">
    <!-- --log-line is the row's first-line box height. Every leading element (the
       level dot, the std/host/container tags, the timestamp) sizes itself to it
       and centres its content, so they all land on the same horizontal line as
       the message text instead of each sitting at its own offset. It is an em,
       so it tracks the small/medium/large log size setting. -->
    <div data-v-cf9ff940="" class="relative flex w-full items-start gap-x-2 leading-[1.45] [--log-line:1.45em] group-[.compact]:items-stretch">
      <div class="dropdown dropdown-hover absolute -left-2 z-10 font-sans dropdown-right dropdown-end"><a href="/container/abc/time/2019-06-12T10:55:42.459Z?logId=1" class="btn btn-square btn-xs border-base-content/20 bg-base-100 pointer-events-auto! opacity-0 shadow-sm group-hover/entry:opacity-90" tabindex="0"><svg viewBox="0 0 24 24" width="1.2em" height="1.2em">
            <path fill="currentColor" d="M6 23H3q-.825 0-1.412-.587T1 21v-3h2v3h3zm12 0v-2h3v-3h2v3q0 .825-.587 1.413T21 23zm-6-4.5q-3 0-5.437-1.775T3 12q1.125-2.95 3.563-4.725T12 5.5t5.438 1.775T21 12q-1.125 2.95-3.562 4.725T12 18.5m0-3q1.45 0 2.475-1.025T15.5 12t-1.025-2.475T12 8.5T9.525 9.525T8.5 12t1.025 2.475T12 15.5m0-2q-.625 0-1.062-.437T10.5 12t.438-1.062T12 10.5t1.063.438T13.5 12t-.437 1.063T12 13.5M1 6V3q0-.825.588-1.412T3 1h3v2H3v3zm20 0V3h-3V1h3q.825 0 1.413.588T23 3v3z"></path>
          </svg></a>
        <!-- Built on first hover/focus. Every visible log line renders one of these,
         so eagerly materializing the menu (five rows, two resolved routes) for
         each of them is what made rebuilding the list — on a stdout/stderr
         toggle, a level change, a search — lock the page up. -->
        <!--v-if-->
      </div>
      <!--v-if-->
      <div class="flex gap-x-2 gap-y-1 group-[.compact]:gap-y-0 md:flex-row!">
        <!-- No width class: the cell sizes itself from --log-source-chars, which
           LogList derives from the longest name on screen. Uniform down the
           column, so the timestamps stay flush, without reserving room for
           names nobody has. -->
        <!--v-if-->
        <!-- One log line tall with its content centred, so the timestamp sits on the
       same line as the message rather than a fraction of a line below it. -->
        <div class="tag bg-base-100 inline-flex items-center justify-center rounded-sm px-2 py-[0.2em] [[size='small']]:text-[0.8rem] h-[var(--log-line,1.45em)] py-0! shrink-0 select-none">
          <div class="inline-flex gap-2 text-blue whitespace-nowrap tabular-nums"><time datetime="2019-06-12T10:55:42.459Z" class="max-md:hidden">06/12/2019</time><time datetime="2019-06-12T10:55:42.459Z">10:55:42 AM</time></div>
        </div>
      </div>
      <!-- The dot lives inside a box exactly one log line tall and is centred in it,
       so it lines up with the first line of the message no matter what font size
       the log list is set to. The stretched variants (multi-line grouped
       entries) let the dot fill the box instead. -->
      <div data-v-e625cddd="" class="log-level w-2.5 flex-none flex select-none">
        <div data-v-e625cddd="" class="dot"></div>
      </div>
      <div class="[word-break:break-word] whitespace-pre-wrap group-[.disable-wrap]:whitespace-pre">foo bar</div>
    </div>
  </li>
</ul>"
`;

exports[`<ContainerEventSource /> > render html correctly > should render dates with 24 hour style 1`] = `
"<ul data-v-cf9ff940="" class="group pt-4 medium" style="--log-source-chars: 12;" data-logs="" show-container-name="false">
  <li data-v-cf9ff940="" id="1560336942709" data-time="1560336942709" class="group/entry">
    <div data-v-cf9ff940="" class="flex min-h-[1px] flex-1 content-center justify-center"><span class="loading loading-bars loading-md text-primary m-2" style="display: none;"></span></div>
  </li>
  <li data-v-cf9ff940="" id="1" data-time="1560336942459" class="group/entry">
    <!-- --log-line is the row's first-line box height. Every leading element (the
       level dot, the std/host/container tags, the timestamp) sizes itself to it
       and centres its content, so they all land on the same horizontal line as
       the message text instead of each sitting at its own offset. It is an em,
       so it tracks the small/medium/large log size setting. -->
    <div data-v-cf9ff940="" class="relative flex w-full items-start gap-x-2 leading-[1.45] [--log-line:1.45em] group-[.compact]:items-stretch">
      <div class="dropdown dropdown-hover absolute -left-2 z-10 font-sans dropdown-right dropdown-end"><a href="/container/abc/time/2019-06-12T10:55:42.459Z?logId=1" class="btn btn-square btn-xs border-base-content/20 bg-base-100 pointer-events-auto! opacity-0 shadow-sm group-hover/entry:opacity-90" tabindex="0"><svg viewBox="0 0 24 24" width="1.2em" height="1.2em">
            <path fill="currentColor" d="M6 23H3q-.825 0-1.412-.587T1 21v-3h2v3h3zm12 0v-2h3v-3h2v3q0 .825-.587 1.413T21 23zm-6-4.5q-3 0-5.437-1.775T3 12q1.125-2.95 3.563-4.725T12 5.5t5.438 1.775T21 12q-1.125 2.95-3.562 4.725T12 18.5m0-3q1.45 0 2.475-1.025T15.5 12t-1.025-2.475T12 8.5T9.525 9.525T8.5 12t1.025 2.475T12 15.5m0-2q-.625 0-1.062-.437T10.5 12t.438-1.062T12 10.5t1.063.438T13.5 12t-.437 1.063T12 13.5M1 6V3q0-.825.588-1.412T3 1h3v2H3v3zm20 0V3h-3V1h3q.825 0 1.413.588T23 3v3z"></path>
          </svg></a>
        <!-- Built on first hover/focus. Every visible log line renders one of these,
         so eagerly materializing the menu (five rows, two resolved routes) for
         each of them is what made rebuilding the list — on a stdout/stderr
         toggle, a level change, a search — lock the page up. -->
        <!--v-if-->
      </div>
      <!--v-if-->
      <div class="flex gap-x-2 gap-y-1 group-[.compact]:gap-y-0 md:flex-row!">
        <!-- No width class: the cell sizes itself from --log-source-chars, which
           LogList derives from the longest name on screen. Uniform down the
           column, so the timestamps stay flush, without reserving room for
           names nobody has. -->
        <!--v-if-->
        <!-- One log line tall with its content centred, so the timestamp sits on the
       same line as the message rather than a fraction of a line below it. -->
        <div class="tag bg-base-100 inline-flex items-center justify-center rounded-sm px-2 py-[0.2em] [[size='small']]:text-[0.8rem] h-[var(--log-line,1.45em)] py-0! shrink-0 select-none">
          <div class="inline-flex gap-2 text-blue whitespace-nowrap tabular-nums"><time datetime="2019-06-12T10:55:42.459Z" class="max-md:hidden">06/12/2019</time><time datetime="2019-06-12T10:55:42.459Z">10:55:42</time></div>
        </div>
      </div>
      <!-- The dot lives inside a box exactly one log line tall and is centred in it,
       so it lines up with the first line of the message no matter what font size
       the log list is set to. The stretched variants (multi-line grouped
       entries) let the dot fill the box instead. -->
      <div data-v-e625cddd="" class="log-level w-2.5 flex-none flex select-none">
        <div data-v-e625cddd="" class="dot"></div>
      </div>
      <div class="[word-break:break-word] whitespace-pre-wrap group-[.disable-wrap]:whitespace-pre">foo bar</div>
    </div>
  </li>
</ul>"
`;

exports[`<ContainerEventSource /> > render html correctly > should render messages 1`] = `
"<ul data-v-cf9ff940="" class="group pt-4 medium" style="--log-source-chars: 12;" data-logs="" show-container-name="false">
  <li data-v-cf9ff940="" id="1560336942709" data-time="1560336942709" class="group/entry">
    <div data-v-cf9ff940="" class="flex min-h-[1px] flex-1 content-center justify-center"><span class="loading loading-bars loading-md text-primary m-2" style="display: none;"></span></div>
  </li>
  <li data-v-cf9ff940="" id="1" data-time="1560336942459" class="group/entry">
    <!-- --log-line is the row's first-line box height. Every leading element (the
       level dot, the std/host/container tags, the timestamp) sizes itself to it
       and centres its content, so they all land on the same horizontal line as
       the message text instead of each sitting at its own offset. It is an em,
       so it tracks the small/medium/large log size setting. -->
    <div data-v-cf9ff940="" class="relative flex w-full items-start gap-x-2 leading-[1.45] [--log-line:1.45em] group-[.compact]:items-stretch">
      <div class="dropdown dropdown-hover absolute -left-2 z-10 font-sans dropdown-right dropdown-end"><a href="/container/abc/time/2019-06-12T10:55:42.459Z?logId=1" class="btn btn-square btn-xs border-base-content/20 bg-base-100 pointer-events-auto! opacity-0 shadow-sm group-hover/entry:opacity-90" tabindex="0"><svg viewBox="0 0 24 24" width="1.2em" height="1.2em">
            <path fill="currentColor" d="M6 23H3q-.825 0-1.412-.587T1 21v-3h2v3h3zm12 0v-2h3v-3h2v3q0 .825-.587 1.413T21 23zm-6-4.5q-3 0-5.437-1.775T3 12q1.125-2.95 3.563-4.725T12 5.5t5.438 1.775T21 12q-1.125 2.95-3.562 4.725T12 18.5m0-3q1.45 0 2.475-1.025T15.5 12t-1.025-2.475T12 8.5T9.525 9.525T8.5 12t1.025 2.475T12 15.5m0-2q-.625 0-1.062-.437T10.5 12t.438-1.062T12 10.5t1.063.438T13.5 12t-.437 1.063T12 13.5M1 6V3q0-.825.588-1.412T3 1h3v2H3v3zm20 0V3h-3V1h3q.825 0 1.413.588T23 3v3z"></path>
          </svg></a>
        <!-- Built on first hover/focus. Every visible log line renders one of these,
         so eagerly materializing the menu (five rows, two resolved routes) for
         each of them is what made rebuilding the list — on a stdout/stderr
         toggle, a level change, a search — lock the page up. -->
        <!--v-if-->
      </div>
      <!--v-if-->
      <div class="flex gap-x-2 gap-y-1 group-[.compact]:gap-y-0 md:flex-row!">
        <!-- No width class: the cell sizes itself from --log-source-chars, which
           LogList derives from the longest name on screen. Uniform down the
           column, so the timestamps stay flush, without reserving room for
           names nobody has. -->
        <!--v-if-->
        <!-- One log line tall with its content centred, so the timestamp sits on the
       same line as the message rather than a fraction of a line below it. -->
        <div class="tag bg-base-100 inline-flex items-center justify-center rounded-sm px-2 py-[0.2em] [[size='small']]:text-[0.8rem] h-[var(--log-line,1.45em)] py-0! shrink-0 select-none">
          <div class="inline-flex gap-2 text-blue whitespace-nowrap tabular-nums"><time datetime="2019-06-12T10:55:42.459Z" class="max-md:hidden">06/12/2019</time><time datetime="2019-06-12T10:55:42.459Z">10:55:42 AM</time></div>
        </div>
      </div>
      <!-- The dot lives inside a box exactly one log line tall and is centred in it,
       so it lines up with the first line of the message no matter what font size
       the log list is set to. The stretched variants (multi-line grouped
       entries) let the dot fill the box instead. -->
      <div data-v-e625cddd="" class="log-level w-2.5 flex-none flex select-none">
        <div data-v-e625cddd="" class="dot"></div>
      </div>
      <div class="[word-break:break-word] whitespace-pre-wrap group-[.disable-wrap]:whitespace-pre">This is a message.</div>
    </div>
  </li>
</ul>"
`;

exports[`<ContainerEventSource /> > should parse messages 1`] = `
LoadMoreLogEntry {
  "_message": "",
  "containerID": "",
  "date": 2019-06-12T10:55:42.709Z,
  "id": 1560336942709,
  "level": undefined,
  "loader": [Function],
  "rawMessage": "info",
  "rememberScrollPosition": true,
  "std": "stderr",
}
`;
